--- a/package.json
+++ b/package.json
@@ -17,7 +17,12 @@
   },
   "homepage": "https://github.com/rahul43177/Products-Management#readme",
   "dependencies": {
+    "aws-sdk": "^2.1410.0",
+    "bcrypt": "^5.1.0",
     "express": "^4.18.2",
-    "mongoose": "^7.3.1"
+    "jsonwebtoken": "^9.0.0",
+    "mongoose": "^7.3.1",
+    "multer": "^1.4.5-lts.1",
+    "validator": "^13.9.0"
   }
 }
